--- a/src/components/personDetails.css
+++ b/src/components/personDetails.css
@@ -34,6 +34,7 @@ dd {
     place-items: center;
     gap: 20px 30px;
     border: 1px solid #dfdfdf;
+    background-color: rgb(240, 212, 240);
   }
 
   @media screen and (min-width:1024px) {
